?? Aug 2005, PHP 5.1 Release Candidate 1
- Updated bundled libraries in Windows distribution. (Edin)
  . zlib 1.2.3
  . curl 7.14.0
  . openssl 0.9.8
  . ming 0.3b
  . libpq (PostgreSQL) 8.0.1
- Fixed "make test" to work for phpized extensions. (Hartmut, Jani)
- Fixed failing queries (FALSE returned) with mysqli_query() on 64 bit systems.
  (Andrey)
- Fixed bug #34064 (arr[] as param to function in class gives invalid opcode).
  (Dmitry)
- Fixed bug #34062 (Crash in catch block when many arguments are used).
  (Dmitry)
- Fixed bug #34045 (Buffer overflow with serialized object). (Dmitry)
- Fixed bug #33999 (object remains object when cast to int). (Dmitry)
- Fixed bug #33996 (No information given for fatal error on passing invalid
  value to typed argument). (Dmitry)
- Fixed bug #33989 (extract($GLOBALS,EXTR_REFS) crashes PHP). (Dmitry)
- Fixed bug #33967 (misuse of Exception constructor doesn't display errorfile).
  (Jani)
- Fixed bug #33958 (duplicate cookies and magic_quotes=off may cause a crash).
  (Ilia)
- Fixed bug #33940 (array_map() fails to pass by reference when called
  recursively). (Dmitry)
- Fixed bug #33917 (number_format() output with > 1 char separators). (Jani)
- Fixed bug #33904 (input array keys being escaped when magic quotes is off). 
  (Ilia)
- Fixed bug #33899 (CLI: setting extension_dir=some/path extension=foobar.so
  does not work). (Jani)
- Fixed bug #33882 (CLI was looking for php.ini in wrong path). (Hartmut)
- Fixed bug #33869 (strtotime() problem with "+1days" format). (Ilia) 
- Fixed bug #33841 (pdo sqlite driver forgets to update affected column count
  on execution of prepared statments). (Ilia)
- Fixed bug #33837 (Informix ESQL version numbering schema changed). (Jani)
- Fixed bug #33802 (throw Exception in error handler causes crash). (Dmitry)
- Fixed bug #33723 (php_value overrides php_admin_value). (Dmitry)
- Fixed bug #33710 (ArrayAccess objects doen't initialize $this). (Dmitry)